Cycles texture interpolation bug #45946

Closed
opened 2015-08-29 08:01:34 +02:00 by Robert M · 7 comments

System Information
Debian AMD64, fglrx-driver

Blender Version
Broken: current master

Short description of error
The texture interpolation shows artefacts near the 0.0 UV coordinates.
This issue appears in Linear, Cubic and Smart mode, and only in conjunction with 'Clip' or 'Extend' extrapolation.

The interpolation setting 'Closest', and extrapolation option 'Repeat' are free from those artefacts.

Exact steps for others to reproduce the error
Here is a blend file:
texture_interpolation_bug.blend

  1. Set 'Viewport Shading' to 'Rendered'
  2. change settings on the texture node (interpolation(Linear, Cubic, Smart, Closest) and extrapolation(Clip, Repeat, Extend))
**System Information** Debian AMD64, fglrx-driver **Blender Version** Broken: current master **Short description of error** The texture interpolation shows artefacts near the 0.0 UV coordinates. This issue appears in Linear, Cubic and Smart mode, and only in conjunction with 'Clip' or 'Extend' extrapolation. The interpolation setting 'Closest', and extrapolation option 'Repeat' are free from those artefacts. **Exact steps for others to reproduce the error** Here is a blend file: [texture_interpolation_bug.blend](https://archive.blender.org/developer/F228898/texture_interpolation_bug.blend) 1. Set 'Viewport Shading' to 'Rendered' 2. change settings on the texture node (interpolation(Linear, Cubic, Smart, Closest) and extrapolation(Clip, Repeat, Extend))
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @robertm

Added subscriber: @robertm
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal
Member

Screenshots...

Linear interpolation:

2015-08-29_10-20-14.png

Closest:

2015-08-29_10-21-21.png

Screenshots... Linear interpolation: ![2015-08-29_10-20-14.png](https://archive.blender.org/developer/F228927/2015-08-29_10-20-14.png) Closest: ![2015-08-29_10-21-21.png](https://archive.blender.org/developer/F228929/2015-08-29_10-21-21.png)
Sergey Sharybin self-assigned this 2015-08-29 11:09:21 +02:00

This issue was referenced by 0bc4bc2e61

This issue was referenced by 0bc4bc2e616bc860634bb3b4a637c3400dc5c68f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@745fe20eb1

This issue was referenced by blender/cycles@745fe20eb1dab488ac57c9fb1be7ff62f57b17f9
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#45946
No description provided.