Fix T45946: Cycles texture interpolation bug

Coordinate clamping was done in the wrong order.